--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "jquery": "^3.1.1",
+    "node-sass": "^4.5.0",
     "openlayers": "^4.0.1",
+    "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "uglify-js": "^2.7.5",
     "webpack": "^2.2.1"
